--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@medicplus/js-document-editor",
-  "version": "2.2.3",
+  "version": "2.2.4",
   "description": "javascript document maker and editor",
   "main": "dist/jeditor.js",
   "scripts": {
@@ -19,22 +19,26 @@
   },
   "homepage": "https://github.com/medic-plus/js-document-editor#readme",
   "dependencies": {
-    "@fortawesome/fontawesome-free": "^6.1.0",
-    "deepmerge": "^4.2.2",
-    "interactjs": "^1.10.11"
+    "@fortawesome/fontawesome-free": "^6.5.1",
+    "deepmerge": "^4.3.1",
+    "interactjs": "^1.10.26"
   },
   "devDependencies": {
-    "@babel/core": "^7.15.0",
-    "@babel/preset-env": "^7.15.0",
+    "@babel/core": "^7.23.7",
+    "@babel/preset-env": "^7.23.7",
     "babel-loader": "^9.1.3",
-    "css-loader": "^6.2.0",
-    "mini-css-extract-plugin": "^2.2.0",
+    "css-loader": "^6.8.1",
+    "mini-css-extract-plugin": "^2.7.6",
     "node-sass": "^9.0.0",
-    "postcss-loader": "^7.0.0",
-    "postcss-preset-env": "^9.0.0",
-    "sass-loader": "^13.0.0",
-    "style-loader": "^3.2.1",
-    "webpack": "^5.49.0",
+    "postcss-loader": "^7.3.4",
+    "postcss-preset-env": "^9.3.0",
+    "sass-loader": "^13.3.3",
+    "style-loader": "^3.3.3",
+    "webpack": "^5.89.0",
     "webpack-cli": "^5.1.4"
+  },
+  "engines" : { 
+    "npm" : ">=10.0.0 <11.0.0",
+    "node" : ">=18.0.0 <19.0.0"
   }
 }
