--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "tslib": "^2.7.0",
     "typescript": "^5.6.2",
     "vite": "^5.4.8",
-    "vite-plugin-static-copy": "^1.0.6"
+    "vite-plugin-static-copy": "^1.0.6",
+    "yarn-audit-fix": "^10.0.9"
   },
   "files": [
     "dist",
